--- a/iManager/app/src/main/AndroidManifest.xml
+++ b/iManager/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:label="@string/title_activity_weather"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".TransActivity"></activity>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss"/>
     </application>
 
 </manifest>
