--- a/iManager/app/build.gradle
+++ b/iManager/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:support-compat:26.1.0'
+
+    compile 'com.google.maps:google-maps-services:0.2.5'
 }
