--- a/iManager/app/src/main/AndroidManifest.xml
+++ b/iManager/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!-- ask for internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -34,10 +34,13 @@
             android:name=".Weather"
             android:label="@string/title_activity_weather"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TransActivity"></activity>
+        <activity android:name=".TransActivity" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss"/>
+            android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss" />
+
+        <activity android:name=".WearingActivity"></activity>
     </application>
 
 </manifest>
