--- a/iManager/app/src/main/AndroidManifest.xml
+++ b/iManager/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <!--ask for writing and reading file permissions-->
+    <!-- ask for writing and reading file permissions -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -44,7 +44,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss" />
 
-        <activity android:name=".WearingActivity"></activity>
+        <activity android:name=".ClothActivity" />
     </application>
 
 </manifest>
