--- a/iManager/app/src/main/AndroidManifest.xml
+++ b/iManager/app/src/main/AndroidManifest.xml
@@ -5,12 +5,14 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <!-- ask for internet permission -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
@@ -34,10 +36,14 @@
             android:name=".Weather"
             android:label="@string/title_activity_weather"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TransActivity"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss"/>
+            android:value="AIzaSyB1zIGXslsOzfapAQN0ioRc0INjz6Gwoss" />
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
